fixong oil reception , automatic oil reception based on a oliv reception 90%